@@ -47,6 +47,8 @@ import ome.xml.model.enums.Immersion;
 import ome.xml.model.primitives.PositiveFloat;
 import ome.xml.model.primitives.Timestamp;
 
+import ome.units.quantity.Frequency;
+import ome.units.quantity.Length;
 import ome.units.quantity.Time;
 import ome.units.UNITS;
 
@@ -383,8 +385,8 @@ public class DeltavisionReader extends FormatReader {
 
     ndFilters = new Double[getSizeC()];
 
-    Vector<Float> uniqueTileX = new Vector<Float>();
-    Vector<Float> uniqueTileY = new Vector<Float>();
+    final Vector<Length> uniqueTileX = new Vector<Length>();
+    final Vector<Length> uniqueTileY = new Vector<Length>();
 
     // Run through every image and fill in the
     // Extended Header information array for that image
@@ -403,17 +405,19 @@ public class DeltavisionReader extends FormatReader {
       DVExtHdrFields hdr = new DVExtHdrFields(in);
       extHdrFields[z][w][t] = hdr;
 
-      if (!uniqueTileX.contains(hdr.stageXCoord) && hdr.stageXCoord != 0) {
+      if (!uniqueTileX.contains(hdr.stageXCoord) &&
+              hdr.stageXCoord.value().floatValue() != 0) {
         uniqueTileX.add(hdr.stageXCoord);
       }
-      else if (hdr.stageXCoord == 0) {
+      else if (hdr.stageXCoord.value().floatValue() == 0) {
         hasZeroX = true;
       }
 
-      if (!uniqueTileY.contains(hdr.stageYCoord) && hdr.stageYCoord != 0) {
+      if (!uniqueTileY.contains(hdr.stageYCoord) &&
+              hdr.stageYCoord.value().floatValue() != 0) {
         uniqueTileY.add(hdr.stageYCoord);
       }
-      else if (hdr.stageYCoord == 0) {
+      else if (hdr.stageYCoord.value().floatValue() == 0) {
         hasZeroY = true;
       }
     }
@@ -431,7 +435,10 @@ public class DeltavisionReader extends FormatReader {
     }
 
     if (yTiles > 1) {
-      if (uniqueTileY.get(1) < uniqueTileY.get(0)) {
+       // TODO: use compareTo once Length implements Comparable
+      final Number y0 = uniqueTileY.get(0).value(UNITS.REFERENCEFRAME);
+      final Number y1 = uniqueTileY.get(1).value(UNITS.REFERENCEFRAME);
+      if (y1.floatValue() < y0.floatValue()) {
         backwardsStage = true;
       }
     }
@@ -686,17 +693,17 @@ public class DeltavisionReader extends FormatReader {
       }
 
       Double x = new Double(pixX);
-      PositiveFloat sizeX = FormatTools.getPhysicalSizeX(x);
+      Length sizeX = FormatTools.getPhysicalSizeX(x);
       if (sizeX != null) {
         store.setPixelsPhysicalSizeX(sizeX, series);
       }
       Double y = new Double(pixY);
-      PositiveFloat sizeY = FormatTools.getPhysicalSizeY(y);
+      Length sizeY = FormatTools.getPhysicalSizeY(y);
       if (sizeY != null) {
         store.setPixelsPhysicalSizeY(sizeY, series);
       }
       Double z = new Double(pixZ);
-      PositiveFloat sizeZ = FormatTools.getPhysicalSizeZ(z);
+      Length sizeZ = FormatTools.getPhysicalSizeZ(z);
       if (sizeZ != null) {
         store.setPixelsPhysicalSizeZ(sizeZ, series);
       }
@@ -737,18 +744,18 @@ public class DeltavisionReader extends FormatReader {
 
         // stage position
         if (!logFound || getSeriesCount() > 1) {
-          store.setPlanePositionX(new Double(hdr.stageXCoord), series, i);
-          store.setPlanePositionY(new Double(hdr.stageYCoord), series, i);
-          store.setPlanePositionZ(new Double(hdr.stageZCoord), series, i);
+          store.setPlanePositionX(hdr.stageXCoord, series, i);
+          store.setPlanePositionY(hdr.stageYCoord, series, i);
+          store.setPlanePositionZ(hdr.stageZCoord, series, i);
         }
       }
 
       for (int w=0; w<getSizeC(); w++) {
         DVExtHdrFields hdrC = extHdrFields[0][w][series];
 
-        PositiveFloat emission =
+        Length emission =
           FormatTools.getEmissionWavelength(new Double(waves[w]));
-        PositiveFloat excitation =
+        Length excitation =
           FormatTools.getExcitationWavelength(new Double(hdrC.exWavelen));
 
         if (emission != null) {
@@ -1032,7 +1039,7 @@ public class DeltavisionReader extends FormatReader {
                 pixelSizes[q].trim());
             }
             if (q == 0) {
-              PositiveFloat sizeX = FormatTools.getPhysicalSizeX(size);
+              Length sizeX = FormatTools.getPhysicalSizeX(size);
               if (sizeX != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeX(sizeX, series);
@@ -1040,7 +1047,7 @@ public class DeltavisionReader extends FormatReader {
               }
             }
             if (q == 1) {
-              PositiveFloat sizeY = FormatTools.getPhysicalSizeY(size);
+              Length sizeY = FormatTools.getPhysicalSizeY(size);
               if (sizeY != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeY(sizeY, series);
@@ -1048,7 +1055,7 @@ public class DeltavisionReader extends FormatReader {
               }
             }
             if (q == 2) {
-              PositiveFloat sizeZ = FormatTools.getPhysicalSizeZ(size);
+              Length sizeZ = FormatTools.getPhysicalSizeZ(size);
               if (sizeZ != null) {
                 for (int series=0; series<getSeriesCount(); series++) {
                   store.setPixelsPhysicalSizeZ(sizeZ, series);
@@ -1097,7 +1104,8 @@ public class DeltavisionReader extends FormatReader {
             store.setDetectorID(detectorID, 0, 0);
             for (int series=0; series<getSeriesCount(); series++) {
               for (int c=0; c<getSizeC(); c++) {
-                store.setDetectorSettingsReadOutRate(mhz, series, c);
+                store.setDetectorSettingsReadOutRate(
+                        new Frequency(mhz, UNITS.HZ), series, c);
                 store.setDetectorSettingsID(detectorID, series, c);
               }
             }
@@ -1153,9 +1161,10 @@ public class DeltavisionReader extends FormatReader {
           }
           String[] coords = value.split(",");
           for (int i=0; i<coords.length; i++) {
-            Double p = null;
+            Length p = null;
             try {
-              p = new Double(coords[i].trim());
+              final Double number = Double.valueOf(coords[i]);
+              p = new Length(number, UNITS.REFERENCEFRAME);
             }
             catch (NumberFormatException e) {
               LOGGER.warn("Could not parse stage coordinate '{}'", coords[i]);
@@ -2237,7 +2246,7 @@ public class DeltavisionReader extends FormatReader {
       store.setObjectiveCalibratedMagnification(calibratedMagnification, 0, 0);
     }
     if (workingDistance != null) {
-      store.setObjectiveWorkingDistance(workingDistance * 1000, 0, 0);
+      store.setObjectiveWorkingDistance(new Length(workingDistance, UNITS.MM), 0, 0);
     }
   }
 
@@ -2258,13 +2267,13 @@ public class DeltavisionReader extends FormatReader {
     public float timeStampSeconds;
 
     /** X stage coordinates. */
-    public float stageXCoord;
+    public Length stageXCoord;
 
     /** Y stage coordinates. */
-    public float stageYCoord;
+    public Length stageYCoord;
 
     /** Z stage coordinates. */
-    public float stageZCoord;
+    public Length stageZCoord;
 
     /** Minimum intensity */
     public float minInten;
@@ -2349,9 +2358,9 @@ public class DeltavisionReader extends FormatReader {
         // for ImageJ (http://rsb.info.nih.gov/ij/plugins/track/delta.html)
         photosensorReading = in.readFloat();
         timeStampSeconds = in.readFloat();
-        stageXCoord = in.readFloat();
-        stageYCoord = in.readFloat();
-        stageZCoord = in.readFloat();
+        stageXCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
+        stageYCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
+        stageZCoord = new Length(in.readFloat(), UNITS.REFERENCEFRAME);
         minInten = in.readFloat();
         maxInten = in.readFloat();
         in.skipBytes(4);
