@@ -39,7 +39,6 @@ import loci.formats.CoreMetadata;
 import loci.formats.FormatTools;
 import loci.formats.MetadataTools;
 import loci.formats.meta.MetadataStore;
-
 import ome.xml.model.enums.Correction;
 import ome.xml.model.enums.DetectorType;
 import ome.xml.model.enums.EnumerationException;
@@ -58,13 +57,13 @@ import ome.xml.model.primitives.PercentFraction;
 import ome.xml.model.primitives.PositiveFloat;
 import ome.xml.model.primitives.PositiveInteger;
 import ome.xml.model.primitives.Timestamp;
-
+import ome.units.quantity.ElectricPotential;
+import ome.units.quantity.Length;
 import ome.units.quantity.Time;
 import ome.units.UNITS;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.xml.sax.Attributes;
 
 /**
@@ -92,7 +91,7 @@ public class LeicaHandler extends BaseHandler {
   private int count = 0, numChannels, extras = 1;
 
   private Vector<String> lutNames;
-  private Vector<Double> xPos, yPos, zPos;
+  private Vector<Length> xPos, yPos, zPos;
   private double physicalSizeX, physicalSizeY;
 
   private int numDatasets = -1;
@@ -136,9 +135,9 @@ public class LeicaHandler extends BaseHandler {
     this.store = store;
     core = new ArrayList<CoreMetadata>();
     detectorIndices = new Vector<Integer>();
-    xPos = new Vector<Double>();
-    yPos = new Vector<Double>();
-    zPos = new Vector<Double>();
+    xPos = new Vector<Length>();
+    yPos = new Vector<Length>();
+    zPos = new Vector<Length>();
     bytesPerAxis = new Hashtable<Integer, String>();
     this.level = level;
   }
@@ -209,7 +208,7 @@ public class LeicaHandler extends BaseHandler {
         int nChannels = coreMeta.rgb ? 0 : numChannels;
 
         for (int c=0; c<nChannels; c++) {
-          store.setChannelPinholeSize(pinhole, numDatasets, c);
+          store.setChannelPinholeSize(new Length(pinhole, UNITS.MICROM), numDatasets, c);
         }
 
         for (int i=0; i<xPos.size(); i++) {
@@ -263,7 +262,7 @@ public class LeicaHandler extends BaseHandler {
           store.setDetectorSettingsID(id, numDatasets, index);
         }
         for (int c=0; c<nChannels; c++) {
-          store.setChannelPinholeSize(pinhole, numDatasets, c);
+          store.setChannelPinholeSize(new Length(pinhole, UNITS.MICROM), numDatasets, c);
         }
       }
     }
@@ -340,7 +339,8 @@ public class LeicaHandler extends BaseHandler {
           store.setDetectorModel(d.model, numDatasets, detectorChannel);
           store.setDetectorZoom(d.zoom, numDatasets, detectorChannel);
           store.setDetectorOffset(d.offset, numDatasets, detectorChannel);
-          store.setDetectorVoltage(d.voltage, numDatasets, detectorChannel);
+          store.setDetectorVoltage(new ElectricPotential(d.voltage, UNITS.V),
+                  numDatasets, detectorChannel);
 
           if (c < numChannels) {
             if (d.active) {
@@ -439,7 +439,7 @@ public class LeicaHandler extends BaseHandler {
               break;
           }
           physicalSizeX = physicalSize.doubleValue();
-          PositiveFloat sizeX = FormatTools.getPhysicalSizeX(physicalSize);
+          Length sizeX = FormatTools.getPhysicalSizeX(physicalSize);
           if (sizeX != null) {
             store.setPixelsPhysicalSizeX(sizeX, numDatasets);
           }
@@ -458,7 +458,7 @@ public class LeicaHandler extends BaseHandler {
           else {
             coreMeta.sizeY = len;
             physicalSizeY = physicalSize.doubleValue();
-            PositiveFloat sizeY = FormatTools.getPhysicalSizeY(physicalSize);
+            Length sizeY = FormatTools.getPhysicalSizeY(physicalSize);
             if (sizeY != null) {
               store.setPixelsPhysicalSizeY(sizeY, numDatasets);
             }
@@ -470,7 +470,7 @@ public class LeicaHandler extends BaseHandler {
             coreMeta.sizeY = len;
             coreMeta.sizeZ = 1;
             physicalSizeY = physicalSize.doubleValue();
-            PositiveFloat sizeY = FormatTools.getPhysicalSizeY(physicalSize);
+            Length sizeY = FormatTools.getPhysicalSizeY(physicalSize);
             if (sizeY != null) {
               store.setPixelsPhysicalSizeY(sizeY, numDatasets);
             }
@@ -487,7 +487,7 @@ public class LeicaHandler extends BaseHandler {
             coreMeta.sizeY = len;
             coreMeta.sizeT = 1;
             physicalSizeY = physicalSize.doubleValue();
-            PositiveFloat sizeY = FormatTools.getPhysicalSizeY(physicalSize);
+            Length sizeY = FormatTools.getPhysicalSizeY(physicalSize);
             if (sizeY != null) {
               store.setPixelsPhysicalSizeY(sizeY, numDatasets);
             }
@@ -521,7 +521,7 @@ public class LeicaHandler extends BaseHandler {
       }
       else if (id.equals("dblStepSize")) {
         double zStep = Double.parseDouble(value) * 1000000;
-        PositiveFloat sizeZ = FormatTools.getPhysicalSizeZ(zStep);
+        Length sizeZ = FormatTools.getPhysicalSizeZ(zStep);
         if (sizeZ != null) {
           store.setPixelsPhysicalSizeZ(sizeZ, numDatasets);
         }
@@ -563,7 +563,7 @@ public class LeicaHandler extends BaseHandler {
         }
         else if (id.endsWith("WaveLength")) {
           Double exWave = new Double(value);
-          PositiveFloat ex = FormatTools.getExcitationWavelength(exWave);
+          Length ex = FormatTools.getExcitationWavelength(exWave);
           if (ex != null) {
             channel.exWave = ex;
           }
@@ -673,29 +673,32 @@ public class LeicaHandler extends BaseHandler {
       else if (attribute.equals("XPos")) {
         int c = coreMeta.rgb || coreMeta.sizeC == 0 ? 1 : coreMeta.sizeC;
         int nPlanes = coreMeta.imageCount;
-        Double posX = new Double(variant);
+        final Double posXn = Double.valueOf(variant);
+        final Length posXl = new Length(posXn, UNITS.REFERENCEFRAME);
         for (int image=0; image<nPlanes; image++) {
-          store.setPlanePositionX(posX, numDatasets, image);
+          store.setPlanePositionX(posXl, numDatasets, image);
         }
-        if (numChannels == 0) xPos.add(posX);
+        if (numChannels == 0) xPos.add(posXl);
       }
       else if (attribute.equals("YPos")) {
         int c = coreMeta.rgb || coreMeta.sizeC == 0 ? 1 : coreMeta.sizeC;
         int nPlanes = coreMeta.imageCount;
-        Double posY = new Double(variant);
+        final Double posYn = Double.valueOf(variant);
+        final Length posYl = new Length(posYn, UNITS.REFERENCEFRAME);
         for (int image=0; image<nPlanes; image++) {
-          store.setPlanePositionY(posY, numDatasets, image);
+          store.setPlanePositionY(posYl, numDatasets, image);
         }
-        if (numChannels == 0) yPos.add(posY);
+        if (numChannels == 0) yPos.add(posYl);
       }
       else if (attribute.equals("ZPos")) {
         int c = coreMeta.rgb || coreMeta.sizeC == 0 ? 1 : coreMeta.sizeC;
         int nPlanes = coreMeta.imageCount;
-        Double posZ = new Double(variant);
+        final Double posZn = Double.valueOf(variant);
+        final Length posZl = new Length(posZn, UNITS.REFERENCEFRAME);
         for (int image=0; image<nPlanes; image++) {
-          store.setPlanePositionZ(posZ, numDatasets, image);
+          store.setPlanePositionZ(posZl, numDatasets, image);
         }
-        if (numChannels == 0) zPos.add(posZ);
+        if (numChannels == 0) zPos.add(posZl);
       }
       else if (objectClass.equals("CSpectrophotometerUnit")) {
         Integer v = null;
@@ -709,13 +712,13 @@ public class LeicaHandler extends BaseHandler {
           store.setFilterID(id, numDatasets, nextFilter);
           store.setFilterModel(object, numDatasets, nextFilter);
 
-          PositiveInteger in = FormatTools.getCutIn(v);
+          Length in = FormatTools.getCutIn(v);
           if (in != null) {
             store.setTransmittanceRangeCutIn(in, numDatasets, nextFilter);
           }
         }
         else if (attributes.getValue("Description").endsWith("(right)")) {
-          PositiveInteger out = FormatTools.getCutOut(v);
+          Length out = FormatTools.getCutOut(v);
           if (out != null) {
             store.setTransmittanceRangeCutOut(out, numDatasets, nextFilter);
             nextFilter++;
@@ -765,8 +768,8 @@ public class LeicaHandler extends BaseHandler {
             MetadataTools.createLSID("Filter", numDatasets, nextFilter);
           store.setFilterID(filter, numDatasets, nextFilter);
 
-          PositiveInteger in = FormatTools.getCutIn(m.cutIn);
-          PositiveInteger out = FormatTools.getCutOut(m.cutOut);
+          Length in = FormatTools.getCutIn(m.cutIn);
+          Length out = FormatTools.getCutOut(m.cutOut);
           if (in != null) {
             store.setTransmittanceRangeCutIn(in, numDatasets, nextFilter);
           }
@@ -799,7 +802,9 @@ public class LeicaHandler extends BaseHandler {
           store.setDetectorModel(detector.model, numDatasets, nextChannel);
           store.setDetectorZoom(detector.zoom, numDatasets, nextChannel);
           store.setDetectorOffset(detector.offset, numDatasets, nextChannel);
-          store.setDetectorVoltage(detector.voltage, numDatasets, nextChannel);
+          store.setDetectorVoltage(
+                  new ElectricPotential(detector.voltage, UNITS.V),
+                  numDatasets, nextChannel);
         }
 
         if (laser != null && laser.intensity < 100) {
@@ -809,7 +814,7 @@ public class LeicaHandler extends BaseHandler {
             new PercentFraction((float) laser.intensity / 100f),
             numDatasets, nextChannel);
 
-          PositiveFloat wavelength =
+          Length wavelength =
             FormatTools.getExcitationWavelength(laser.wavelength);
           if (wavelength != null) {
             store.setChannelExcitationWavelength(wavelength,
@@ -840,7 +845,7 @@ public class LeicaHandler extends BaseHandler {
       store.setLaserID(l.id, numDatasets, l.index);
       laserCount++;
 
-      PositiveFloat wavelength = FormatTools.getWavelength(l.wavelength);
+      Length wavelength = FormatTools.getWavelength(l.wavelength);
       if (wavelength != null) {
         store.setLaserWavelength(wavelength, numDatasets, l.index);
       }
@@ -1031,12 +1036,13 @@ public class LeicaHandler extends BaseHandler {
       store.setLabelText(text, roi, 0);
       if (fontSize != null) {
         double size = Double.parseDouble(fontSize);
-        NonNegativeInteger fontSize = FormatTools.getFontSize((int) size);
+        Length fontSize = FormatTools.getFontSize((int) size);
         if (fontSize != null) {
           store.setLabelFontSize(fontSize, roi, 0);
         }
       }
-      store.setLabelStrokeWidth(new Double(linewidth), roi, 0);
+      Length l = new Length(new Double(linewidth), UNITS.PIXEL);
+      store.setLabelStrokeWidth(l, roi, 0);
 
       if (!normalized) normalize();
 
@@ -1186,7 +1192,7 @@ public class LeicaHandler extends BaseHandler {
   class Channel {
     public String detector;
     public Double gain;
-    public PositiveFloat exWave;
+    public Length exWave;
     public String name;
   }
 
